--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@google-cloud/logging": "^10.5.0",
     "@google-cloud/run": "^0.6.0",
     "@types/datadog-metrics": "0.6.1",
+    "agent-base": "^7.1.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "async-retry": "1.3.1",
@@ -83,6 +84,7 @@
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
     "google-auth-library": "^8.9.0",
+    "http-proxy-agent": "^7.0.0",
     "inquirer": "^8.2.5",
     "inquirer-checkbox-plus-prompt": "^1.4.2",
     "js-yaml": "3.13.1",
