--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "async-retry": "1.3.1",
     "axios": "0.21.4",
     "chalk": "3.0.0",
-    "clipanion": "2.2.2",
+    "clipanion": "^3.2.1",
     "datadog-metrics": "0.9.3",
     "deep-extend": "0.6.0",
     "deep-object-diff": "^1.1.9",
