--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "typeRoots": ["./node_modules/@types/", "./src/types"],
     "module": "commonjs",
-    "declaration" : true,
+    "declaration": true,
     "sourceMap": true,
     "outDir": "dist",
     "rootDir": "src",
@@ -15,6 +15,7 @@
       "*": ["node_modules/*"]
     },
     "allowSyntheticDefaultImports": true,
+    "useUnknownInCatchVariables": false,
     "esModuleInterop": true,
     "lib": ["es2020"],
     "resolveJsonModule": true
