--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "ssh2": "1.14.0",
     "ssh2-streams": "0.4.10",
     "sshpk": "1.16.1",
+    "terminal-link": "2.1.1",
     "tiny-async-pool": "1.2.0",
     "uuid": "^9.0.0",
     "ws": "7.4.6",
