--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "proxy": "^2.1.1",
     "ts-jest": "29.1.1",
     "ts-node": "8.8.1",
+    "ts-proto": "^1.156.3",
     "typescript": "5.1.6"
   }
 }
