--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "access": "public"
   },
   "resolutions": {
+    "aws-sdk-client-mock": "2.1.1",
     "ini": "1.3.7",
     "kind-of@^6.0.0": "6.0.3",
-    "fast-xml-parser@npm:4.2.4": "4.2.5"
+    "fast-xml-parser@npm:4.2.4": "4.2.5",
+    "@types/retry": "0.12.0"
   },
   "pkg": {
     "scripts": [
@@ -69,6 +71,7 @@
     "@google-cloud/logging": "^10.5.0",
     "@google-cloud/run": "^0.6.0",
     "@types/datadog-metrics": "0.6.1",
+    "@types/retry": "0.12.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "async-retry": "1.3.1",
