--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "access": "public"
   },
   "resolutions": {
+    "@types/retry": "0.12.0",
+    "agent-base": "7.1.0",
     "aws-sdk-client-mock": "2.1.1",
-    "ini": "1.3.7",
-    "kind-of@^6.0.0": "6.0.3",
     "fast-xml-parser@npm:4.2.4": "4.2.5",
-    "@types/retry": "0.12.0"
+    "https-proxy-agent": "5.0.0",
+    "ini": "1.3.7",
+    "kind-of@^6.0.0": "6.0.3"
   },
   "pkg": {
     "scripts": [
@@ -92,6 +94,7 @@
     "js-yaml": "3.13.1",
     "jszip": "^3.10.1",
     "ora": "5.4.1",
+    "protobuf": "^0.11.1",
     "proxy-agent": "^6.3.0",
     "rimraf": "^3.0.2",
     "semver": "^7.5.3",
