--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "resolutions": {
     "@types/retry": "0.12.0",
-    "agent-base": "7.1.0",
     "aws-sdk-client-mock": "2.1.1",
     "aws-sdk-client-mock-jest": "2.1.1",
     "fast-xml-parser@npm:4.2.4": "4.2.5",
-    "https-proxy-agent": "5.0.0",
+    "https-proxy-agent": "7.0.0",
+    "proxy-agent": "6.3.0",
     "ini": "1.3.7",
     "kind-of@^6.0.0": "6.0.3"
   },
