--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "sshpk": "1.16.1",
     "terminal-link": "2.1.1",
     "tiny-async-pool": "1.2.0",
+    "typanion": "^3.14.0",
     "uuid": "^9.0.0",
     "ws": "7.4.6",
     "xml2js": "0.5.0",
