--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "@aws-sdk/client-iam": "^3.358.0",
     "@aws-sdk/client-lambda": "^3.358.0",
     "@aws-sdk/client-sfn": "^3.358.0",
-    "@aws-sdk/credential-providers": "^3.358.0",
-    "@aws-sdk/property-provider": "^3.357.0",
+    "@aws-sdk/credential-providers": "3.358.0",
+    "@aws-sdk/property-provider": "3.357.0",
     "@google-cloud/logging": "^10.5.0",
     "@google-cloud/run": "^0.6.0",
     "@types/datadog-metrics": "0.6.1",
