--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,30 +22,29 @@ jobs:
           node-version: ${{ matrix.version }}
       - run: yarn install --immutable
       - run: yarn build
-      # TODO: remove: just for testing faster
-      # - name: Run yarn lint:ci
-      #   run: |
-      #     if ! yarn lint:ci ; then
-      #       echo "ESLint failed with the following errors:"
-      #       jq '.runs[].results' sarif-datadog-ci.sarif
+      - name: Run yarn lint:ci
+        run: |
+          if ! yarn lint:ci ; then
+            echo "ESLint failed with the following errors:"
+            jq '.runs[].results' sarif-datadog-ci.sarif
 
-      #       echo ""
-      #       echo "Find the full SARIF report in the Artifacts section here: https://github.com/DataDog/datadog-ci/actions/runs/${{ github.run_id }}"
-      #       echo "You can fix this by running ==> yarn format <=="
-      #       echo ""
-      #       exit 1
-      #     fi
-      # - run: yarn no-only-in-tests
+            echo ""
+            echo "Find the full SARIF report in the Artifacts section here: https://github.com/DataDog/datadog-ci/actions/runs/${{ github.run_id }}"
+            echo "You can fix this by running ==> yarn format <=="
+            echo ""
+            exit 1
+          fi
+      - run: yarn no-only-in-tests
       
-      # - run: yarn test
-      #   env:
-      #     CI: true
-      #     DD_SERVICE: datadog-ci-tests
-      #     DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
-      #     DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
-      #     DD_APP_KEY: ${{ secrets.DATADOG_APP_KEY_MAIN_ACCOUNT }}
-      #     DD_ENV: ci
-      #     NODE_OPTIONS: -r dd-trace/ci/init
+      - run: yarn test
+        env:
+          CI: true
+          DD_SERVICE: datadog-ci-tests
+          DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
+          DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
+          DD_APP_KEY: ${{ secrets.DATADOG_APP_KEY_MAIN_ACCOUNT }}
+          DD_ENV: ci
+          NODE_OPTIONS: -r dd-trace/ci/init
       - run: mkdir artifacts
       - run: yarn pack --filename artifacts/datadog-ci-${{ matrix.version }}.tgz
       - run: cp -r .github/workflows/e2e artifacts/
@@ -53,12 +52,12 @@ jobs:
         with:
           name: artifacts
           path: artifacts/
-      # - uses: actions/upload-artifact@v3
-      #   if: always()
-      #   with:
-      #     name: sarif-datadog-ci.sarif
-      #     path: sarif-datadog-ci.sarif
-      #     if-no-files-found: error
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: sarif-datadog-ci.sarif
+          path: sarif-datadog-ci.sarif
+          if-no-files-found: error
 
   e2e-test:
     strategy:
@@ -79,16 +78,16 @@ jobs:
         with:
           name: artifacts
       - run: yarn add ./artifacts/datadog-ci-${{ matrix.version }}.tgz
-      # - name: Run synthetics test
-      #   run: yarn datadog-ci synthetics run-tests --config artifacts/e2e/global.config.json
-      #   env:
-      #     DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY_E2E }}
-      #     DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY_E2E }}
-      # - name: Run sourcemaps upload test
-      #   run: yarn datadog-ci sourcemaps upload artifacts/e2e/sourcemaps/ --release-version=e2e --service=e2e-tests --minified-path-prefix=https://e2e-tests.datadoghq.com/static/
-      #   env:
-      #     DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY_E2E }}
-      #     DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY_E2E }}
+      - name: Run synthetics test
+        run: yarn datadog-ci synthetics run-tests --config artifacts/e2e/global.config.json
+        env:
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY_E2E }}
+          DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY_E2E }}
+      - name: Run sourcemaps upload test
+        run: yarn datadog-ci sourcemaps upload artifacts/e2e/sourcemaps/ --release-version=e2e --service=e2e-tests --minified-path-prefix=https://e2e-tests.datadoghq.com/static/
+        env:
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY_E2E }}
+          DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY_E2E }}
       - name: Run junit upload test
         run: yarn datadog-ci junit upload --service=datadog-ci-e2e-tests-junit artifacts/e2e/junit-reports
         env:
