--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@google-cloud/logging": "^10.5.0",
     "@google-cloud/run": "^0.6.0",
     "@smithy/property-provider": "^2.0.12",
+    "@smithy/util-retry": "^2.0.4",
     "@types/datadog-metrics": "0.6.1",
     "@types/retry": "0.12.0",
     "ajv": "^8.12.0",
