--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   "pkg": {
     "scripts": [
       "dist/commands/*/*.js"
+    ],
+    "assets": [
+      "node_modules/axios/dist/node/axios.cjs"
     ]
   },
   "scripts": {
@@ -77,14 +80,14 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "async-retry": "1.3.1",
-    "axios": "0.21.4",
+    "axios": "1.6.0",
     "chalk": "3.0.0",
     "clipanion": "^3.2.1",
     "datadog-metrics": "0.9.3",
     "deep-extend": "0.6.0",
     "deep-object-diff": "^1.1.9",
     "fast-xml-parser": "^4.2.5",
-    "form-data": "3.0.0",
+    "form-data": "4.0.0",
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
     "google-auth-library": "^8.9.0",
