--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,7 @@ jobs:
         env:
           DD_BETA_COMMANDS_ENABLED: 1
           DD_API_KEY: ${{ secrets.DD_API_KEY_CI_VISIBILITY }}
+          DD_APP_KEY: ${{ secrets.DD_APP_KEY_CI_VISIBILITY }}
 
   standalone-binary-test-ubuntu:
     name: Test standalone binary in ubuntu
