--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,7 +179,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run Datadog static analyzer
         id: datadog-static-analysis
-        uses: DataDog/datadog-static-analyzer-github-action@v1
+        uses: DataDog/datadog-static-analyzer-github-action@main
         with:
           dd_app_key: ${{ secrets.DATADOG_APP_KEY_E2E }}
           dd_api_key: ${{ secrets.DATADOG_API_KEY_E2E }}
