--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,6 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "yzhang.markdown-all-in-one",
-    "iliazeus.vscode-ansi" // The "ANSI Open Preview to the Side" command is really useful for Jest snapshots containing ANSI escape codes.
+    "iliazeus.vscode-ansi" // The "ANSI Text: Open Preview to the Side" command is really useful for Jest snapshots containing ANSI escape codes.
   ]
 }
