--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,37 +5,31 @@ stages:
 variables:
   INTERNAL_REGISTRY: 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci
 
-build-docker-image-amd64:
+build-docker-image:
   stage: build
   only: ['tags']
   when: manual
   allow_failure: false
   tags: ['arch:amd64']
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker:20.10
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker:24.0.4-gbi-focal
   script:
     - cd container
-    - docker buildx build --build-arg "VERSION=${CI_COMMIT_TAG}" --tag "${INTERNAL_REGISTRY}/datadog-ci:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-amd64" --push .
-
-build-docker-image-arm64:
-  stage: build
-  only: ['tags']
-  when: manual
-  allow_failure: false
-  tags: ['arch:arm64']
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker:20.10
-  script:
-    - cd container
-    - docker buildx build --build-arg "VERSION=${CI_COMMIT_TAG}" --tag "${INTERNAL_REGISTRY}/datadog-ci:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-arm64" --push .
+    - docker buildx build
+      --platform linux/amd64,linux/arm64/v8
+      --build-arg "VERSION=${CI_COMMIT_TAG}"
+      --tag "${INTERNAL_REGISTRY}/datadog-ci:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
+      --push
+      .
 
 publish-docker-image:
   stage: release
   only: ['tags']
-  needs: ['build-docker-image-amd64', 'build-docker-image-arm64']
+  needs: ['build-docker-image']
   trigger:
     project: DataDog/public-images
     branch: main
     strategy: depend
   variables:
-    IMG_SOURCES: ${INTERNAL_REGISTRY}/datadog-ci:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-amd64,${INTERNAL_REGISTRY}/datadog-ci:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-arm64
+    IMG_SOURCES: ${INTERNAL_REGISTRY}/datadog-ci:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}
     IMG_DESTINATIONS: ci:${CI_COMMIT_TAG},ci:latest
     IMG_SIGNING: 'false'
