--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Check that test data can be queried
         run: |
           yarn add @datadog/datadog-api-client
-          yarn check-junit-upload
+          yarn check-junit-upload '@key1:20'
         env:
           DD_API_KEY: ${{ secrets.DD_API_KEY_CI_VISIBILITY }}
           DD_APP_KEY: ${{ secrets.DD_APP_KEY_CI_VISIBILITY }}
